# weathema

./: Cargo.toml  readme.md
src/: main.rs
src/client/: mod.rs
src/components/: graph_component.rs  location_input.rs  main_holding.rs  mod.rs  spinner.rs  temperature_range.rs  weather_display.rs  weather_image.rs  wind_direction.rs
src/images/: ascii-art.txt  partly-cloudy.txt  snowy.txt  stormy.txt  sunny.txt
src/templates/: footer.aml  graph_component.aml  header.aml  index.aml  location_input.aml  main.aml  main_holding.aml  spinner.aml  temperature_range.aml  weather_display.aml  weather_image.aml  wind_direction.aml
src/test_data/: weather_forecast.json
