[package]
name = "weathema"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anathema = { git = "https://github.com/togglebyte/anathema/", branch = "dev" }
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

