[package]
name = "weathema"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anathema = { git = "https://github.com/togglebyte/anathema/", branch = "main" }
rand = "0.9.0-alpha.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
clap = { version = "4.0", features = ["derive"] }

opentelemetry = { version = "=0.23.0", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "=0.16.0", features = [
  "reqwest-client",
  "reqwest-rustls",
  "http-proto",
  "tls",
] }
tracing = "0.1"
tracing-opentelemetry = "=0.24.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry_sdk = { version = "=0.23.0", features = ["rt-tokio"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }
